Fixed button spacing

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -107,3 +107,9 @@ blockquote p {
 .carousel {
   box-shadow: 0px 3px 8px #2a2a2a;
 }
+
+.btn-primary-spacing
+{
+  margin-right: 5px;
+  margin-bottom: 5px !important;
+}
